<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/chip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="DuplicateClickableBoundsCheck"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="29dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        style="@style/chip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="29dp"
        tools:ignore="DuplicateIds">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.022" />

        <ImageView
            android:id="@+id/imgPortada"
            android:layout_width="256dp"
            android:layout_height="117dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            app:srcCompat="@drawable/img" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Nombre"
            android:inputType="text"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.234"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <EditText
            android:id="@+id/txtDatos"
            android:layout_width="318dp"
            android:layout_height="76dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:hint="@string/datos"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.602"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <CheckBox
            android:id="@+id/checkProfesional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="248dp"
            android:layout_marginBottom="184dp"
            android:text="@string/Profesional"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <CheckBox
            android:id="@+id/checkOlimpico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="184dp"
            android:text="@string/Olimpico"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <ImageButton
            android:id="@+id/imgbutAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="108dp"
            android:contentDescription="@string/Agregar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.157"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_add"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <ImageButton
            android:id="@+id/imgbutLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="112dp"
            android:contentDescription="@string/Limpiar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@android:drawable/ic_menu_delete"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <ImageButton
            android:id="@+id/imgbutBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="52dp"
            android:layout_marginBottom="112dp"
            android:contentDescription="@string/Buscar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_search"
            tools:ignore="DuplicateClickableBoundsCheck" />

        <TextView
            android:id="@+id/txtNivel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="324dp"
            android:text="@string/sub1"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtNivel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="232dp"
            android:text="@string/sub2"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupGenero"
            android:layout_width="208dp"
            android:layout_height="39dp"
            android:layout_marginTop="424dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.541"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateIds,MissingConstraints">

            <RadioButton
                android:id="@+id/radFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#4CAF50"
                android:text="@string/amateur"
                tools:ignore="DuplicateClickableBoundsCheck" />

            <RadioButton
                android:id="@+id/radMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#3F51B5"
                android:text="@string/profesional"
                tools:ignore="DuplicateClickableBoundsCheck" />

        </RadioGroup>

        <EditText
            android:id="@+id/txtEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="216dp"
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/txtNacionalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="264dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/Nacionalidad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.537"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtTitulo" />

        <ToggleButton
            android:id="@+id/toggleTopMundial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="332dp"
            android:text="Top Mundial"
            android:textOff="No Top Mundial"
            android:textOn="Top Mundial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>